fixes home page explore button text alignment on big screens

--- a/app/components/DynamicHomeHeader.css
+++ b/app/components/DynamicHomeHeader.css
@@ -11,10 +11,11 @@
     & .explore-btn {
       transition: all 1s ease;
       transition-property: background-color, box-shadow;
-      padding: calc(var(--gutter)/2) calc(var(--gutter)/2) calc(var(--gutter)/2)
+      padding: calc(var(--gutter)/2) calc(var(--gutter)*0.75) calc(var(--gutter)/2)
         var(--gutter);
       border-radius: 30px;
       text-transform: uppercase;
+      text-align: center;
       font-family: var(--font-family-title);
       color: var(--snow);
       font-size: 14px;
